# delphos-engine

./: .gitignore  REAME.md  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/deep-research/: route.ts
app/api/health/: route.ts
app/api/search/: route.ts
components/: grid-background.tsx  markdown-renderer.tsx  orbital-background.tsx  search-interface.tsx  search-results.tsx  theme-toggle.tsx  weather-widget.tsx
lib/: config.ts
python-app/: app.py  exa_search.py  front-app.py  main.py  package-lock.json  package.json  pyproject.toml  research_api.py
